--- a/main.css
+++ b/main.css
@@ -79,6 +79,13 @@
     background-color: #ddd !important;
 } */
 
-.btn:active {
+.btn:hover {
     background-color: #ddd !important;
 }
+
+.btn:active {
+    background-color: #ffffff !important;
+    color: black;
+}
+
+
